cmake_minimum_required (VERSION 3.10)

project (MoreEffectiveCPP)

add_executable(ItemM6 ItemM6/ItemM6.cpp)
add_executable(ItemM8 ItemM8/ItemM8.cpp)
add_executable(ItemM12 ItemM12/ItemM12.cpp)
add_executable(ItemM13 ItemM13/ItemM13.cpp)
add_executable(ItemM19 ItemM19/ItemM19.cpp)
add_executable(ItemM27 ItemM27/ItemM27.cpp)
